# rip

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agent_state.md  agent_step.md
crates/rip-bench/: Cargo.toml
crates/rip-bench/src/: main.rs
crates/rip-tools/: Cargo.toml
crates/rip-tools/src/: builtins.rs  lib.rs  runtime.rs
crates/rip-tools/src/builtins/: apply_patch.rs  artifact_fetch.rs  grep.rs  ls.rs  mod.rs  read.rs  shell.rs  write.rs
crates/rip-tools/tests/: bash.rs  builtins.rs  checkpoints.rs  common.rs  grep.rs  ls.rs  public_coverage.rs  read.rs  registry.rs  shell.rs  shell_common.rs  source_coverage.rs  write.rs
crates/rip-tui/: Cargo.toml
crates/rip-tui/src/: frame_store.rs  lib.rs  overlay.rs  provider_event.rs  render.rs  state.rs  summary.rs
crates/rip-tui/src/canvas/: ingest.rs  markdown.rs  mod.rs  model.rs  stream_collector.rs
crates/rip-tui/src/palette/: mod.rs
crates/rip-tui/src/render/: activity.rs  canvas.rs  input.rs  mod.rs  status_bar.rs  syntax.rs  theme.rs  util.rs  xray.rs
crates/rip-tui/src/state/: mod.rs  palette.rs  status.rs  tests.rs  thread_picker.rs  update.rs  view.rs
crates/rip-tui/src/summary/: mod.rs  tests.rs
crates/rip-tui/tests/: golden.rs
crates/rip-tui/tests/snapshots/: basic_60x20.txt  basic_80x24.txt  clipboard_fallback_80x24.txt  journey_background_tasks_m_120x40_task_detail.txt  journey_background_tasks_s_80x24_task_detail.txt  journey_background_tasks_xs_60x20_tasks.txt  journey_debug_overlay_m_120x30.txt  journey_error_recovery_overlay_m_120x30.txt  journey_follow_a_run_m_120x40_tool_detail.txt  journey_follow_a_run_s_80x24_activity.txt  journey_follow_a_run_xs_60x20.txt  journey_help_overlay_m_120x30.txt  journey_keylight_typing_s_80x24.txt  journey_markdown_rendering_m_120x40.txt  journey_markdown_rendering_s_80x24.txt  raw_80x24.txt  (+11 more)
crates/ripd/: Cargo.toml
crates/ripd/src/: checkpoints.rs  compaction_auto_summary.rs  compaction_checkpoint_index.rs  compaction_summary.rs  config.rs  context_bundle.rs  context_compiler.rs  continuities.rs  continuity_seek_index.rs  continuity_stream_cache.rs  handoff_context_bundle.rs  lib.rs  local_authority.rs  main.rs  message_ordinal_index.rs  openresponses_compat.rs  openresponses_observability.rs  provider_openresponses.rs  runner.rs  server.rs  server_tests.rs  session.rs  tasks.rs  workspace_lock.rs
(+315 files in other folders)
