[package]
name = "rip-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3.10"

rip-provider-openresponses = { path = "../rip-provider-openresponses" }
rip-tools = { path = "../rip-tools" }
rip-log = { path = "../rip-log" }
rip-workspace = { path = "../rip-workspace" }
rip-kernel = { path = "../rip-kernel" }
