[package]
name = "rip-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
ignore = "0.4"
regex = "1.10"
globset = "0.4"
uuid = { version = "1.6", features = ["v4"] }
rip-kernel = { path = "../rip-kernel" }

[dev-dependencies]
tempfile = "3.10"
