[package]
name = "rip-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
rip-kernel = { path = "../rip-kernel" }
ratatui = "0.30"
serde_json = "1.0"
supports-color = "3.0"
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5.3", default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "parsing",
    "regex-fancy",
    "plist-load",
] }
once_cell = "1.21"
